# TypePipe

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  derivation.nix  flake.nix  opencode.jsonc  publish.sh  snippets.md  update-homebrew.sh  zellij-conversion.md
.github/workflows/: release.yml
docs/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md
src/: lib.rs  main.rs
src/shell/: mod.rs  pty.rs  queue.rs  terminal.rs  types.rs
typeypipe/: Cargo.toml  test_shell.rs
typeypipe/.github/: dependabot.yml
typeypipe/src/: commands.rs  main.rs
typeypipe/src/tests/e2e/: cases.rs
typeypipe/zellij-client/: Cargo.toml
typeypipe/zellij-client/src/: cli_client.rs  input_handler.rs  lib.rs  os_input_output.rs  stdin_ansi_parser.rs
typeypipe/zellij-client/src/old_config_converter/: old_config.rs  old_layout.rs
typeypipe/zellij-client/src/web_client/: message_handlers.rs
typeypipe/zellij-server/: Cargo.toml
typeypipe/zellij-server/src/: background_jobs.rs  lib.rs  logging_pipe.rs  pty.rs  route.rs  screen.rs  screen.rs.backup  session_layout_metadata.rs  status_bar.rs  thread_bus.rs
typeypipe/zellij-server/src/panes/: grid.rs  mod.rs  terminal_pane.rs
typeypipe/zellij-server/src/panes/floating_panes/: mod.rs
typeypipe/zellij-server/src/panes/tiled_panes/: mod.rs  pane_resizer.rs  stacked_panes.rs
typeypipe/zellij-server/src/tab/: clipboard.rs  layout_applier.rs  mod.rs  swap_layouts.rs
typeypipe/zellij-server/src/tab/unit/: tab_integration_tests.rs
typeypipe/zellij-server/src/unit/: screen_tests.rs
typeypipe/zellij-utils/: Cargo.toml
typeypipe/zellij-utils/assets/config/: default.kdl
typeypipe/zellij-utils/src/: cli.rs  consts.rs  data.rs  ipc.rs  lib.rs  logging.rs  pane_size.rs  session_serialization.rs  sessions.rs  setup.rs
typeypipe/zellij-utils/src/input/: actions.rs  command.rs  config.rs  keybinds.rs  layout.rs  mod.rs  options.rs  permission.rs  plugins.rs
typeypipe/zellij-utils/src/input/unit/snapshots/: zellij_utils__input__layout__layout_test__can_load_swap_layouts_from_a_different_file.snap
typeypipe/zellij-utils/src/kdl/: kdl_layout_parser.rs  mod.rs
typeypipe/zellij-utils/src/kdl/snapshots/: zellij_utils__kdl__plugins_to_string.snap  zellij_utils__kdl__plugins_to_string_with_file_and_web.snap
typeypipe/zellij-utils/src/snapshots/: zellij_utils__session_serialization__tests__can_serialize_tab_with_floating_panes.snap  zellij_utils__session_serialization__tests__can_serialize_tab_with_tiled_panes.snap  zellij_utils__setup__setup_test__default_config_with_no_cli_arguments-3.snap  zellij_utils__setup__setup_test__default_config_with_no_cli_arguments.snap
zellij/src/: commands.rs  main.rs
zellij/zellij-client/src/old_config_converter/: convert_old_yaml_files.rs
zellij/zellij-utils/src/input/: config.rs
