[package]
name = "typey-pipe"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "typeypipe"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
portable-pty = "0.8"
nix = { version = "0.29", features = ["term", "process", "signal"] }
termios = "0.2"
tokio-util = { version = "0.7", features = ["codec"] }
crossterm = "0.28"
terminput = "0.4"
terminput-crossterm = "0.1"
chrono = { version = "0.4", features = ["serde"] }
