[package]
name = "typey-pipe"
version = "0.1.0"
authors = ["Typey Pipe Contributors"]
edition = "2021"
description = "A transparent shell wrapper with asynchronous messaging capabilities"
license = "MIT"
repository = "https://github.com/typeypipe/typeypipe"
homepage = "https://typeypipe.dev"
include = ["src/**/*", "LICENSE.md", "README.md", "!**/*_test.*", "!**/tests/**/*"]
# NOTE: When updating this, modify `channel` in `rust-toolchain.toml` accordingly
rust-version = "1.84"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zellij-client = { path = "zellij-client/", version = "0.44.0" }
zellij-server = { path = "zellij-server/", version = "0.44.0" }
zellij-utils = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
vte = { workspace = true }

[workspace]
members = [
    "zellij-client",
    "zellij-server",
    "zellij-utils",
    ".",
]

[workspace.dependencies]
ansi_term = { version = "0.12.1", default-features = false }
anyhow = { version = "1.0.70", default-features = false, features = ["backtrace", "std"] }
async-std = { version = "1.3.0", default-features = false, features = ["attributes", "default", "std", "unstable"] }
clap = { version = "3.2.2", default-features = false, features = ["env", "derive", "color", "std", "suggestions"] }
daemonize = { version = "0.5", default-features = false }
humantime = { version = "2.1.0", default-features = false }
interprocess = { version = "1.2.1", default-features = false }
isahc = { version = "1.7.2", default-features = false, features = ["http2", "text-decoding"] }
lazy_static = { version = "1.4.0", default-features = false }
libc = { version = "0.2", default-features = false, features = ["std"] }
log = { version = "0.4.17", default-features = false }
miette = { version = "5.7.0", default-features = false, features = ["fancy"] }
names = { version = "0.14.0", default-features = false }
nix = { version = "0.23.1", default-features = false }
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
regex = { version = "1.5.5", default-features = false, features = ["perf", "std"] }
rmp-serde = { version = "1.1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
signal-hook = { version = "0.3", default-features = false, features = ["iterator"] }
suggest = { version = "0.4.0", default-features = false }
tempfile = { version = "3.2.0", default-features = false }
termwiz = { version = "0.23.2", default-features = false }
thiserror = { version = "1.0.40", default-features = false }
tokio = { version = "1.38.1", features = ["full"] }
tokio-util = { version = "0.7.15" }
unicode-width = { version = "0.1.8", default-features = false }
url = { version = "2.2.2", default-features = false, features = ["serde"] }
uuid = { version = "1.4.1", default-features = false, features = ["serde", "v4", "std"] }
vte = { version = "0.11.0", default-features = false }
zellij-utils = { path = "zellij-utils/", version = "0.44.0" }

[profile.dev-opt]
inherits = "dev"

[profile.dev-opt.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true

[package.metadata.deb]
depends = "$auto"
license-file = ["LICENSE.md", "4"]
assets = [
  ["target/release/typey-pipe", "usr/bin/typey-pipe", "755"],
  ["README.md", "usr/share/doc/typey-pipe/README.md", "644"],
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[[bin]]
name = "typey-pipe"
path = "src/main.rs"

[features]
default = []


