[package]
name = "zellij-server"
version = "0.44.0"
authors = ["Kunal Mohan <kunalmohan99@gmail.com>"]
edition = "2021"
description = "The server-side library for Zellij"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = { workspace = true }
anyhow = { workspace = true }
async-std = { workspace = true }
async-trait = { version = "0.1.50", default-features = false }
base64 = { version = "0.13.0", default-features = false, features = ["std"] }
cassowary = { version = "0.3.0", default-features = false }
chrono = { version = "0.4.19", default-features = false, features = ["std", "clock"] }
close_fds = { version = "0.3.2", default-features = false }
daemonize = { workspace = true }
interprocess = { workspace = true }
isahc = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = { workspace = true }
sixel-image = { version = "0.1.0", default-features = false }
sixel-tokenizer = { version = "0.1.0", default-features = false }
sysinfo = { version = "0.22.5", default-features = false }
tempfile = { workspace = true }
unicode-width = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
vte = { workspace = true }
zellij-utils = { workspace = true }



[dev-dependencies]

[features]
