[package]
name = "zellij-utils"
version = "0.44.0"
authors = ["Kunal Mohan <kunalmohan99@gmail.com>"]
edition = "2021"
description = "A utility library for Zellij client and server"
license = "MIT"
include = ["src/**/*", "assets/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
backtrace = { version = "0.3.55", default-features = false, features = ["std"] }
bitflags = { version = "2.5.0", default-features = false }
clap = { workspace = true }
clap_complete = { version = "3.2.1", default-features = false }
colored = { version = "2.0.0", default-features = false }
colorsys = { version = "0.6.5", default-features = false, features = ["std"] }
crossbeam = { version = "0.8.1", default-features = false, features = ["alloc", "std"] }
directories = { version = "5.0", default-features = false }
include_dir = { version = "0.7.3", default-features = false }
kdl = { version = "4.5.0", default-features = false, features = ["span"] }
lazy_static = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
names = { workspace = true }
nix = { workspace = true }
prost = { version = "0.11.9", default-features = false, features = ["std", "prost-derive"] }
rmp-serde = { version = "1.1.0", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
strip-ansi-escapes = { version = "0.1.0", default-features = false }
strum = { version = "0.20.0", default-features = false }
strum_macros = { version = "0.20.0", default-features = false }
tempfile = { workspace = true }
thiserror = { workspace = true }
unicode-width = { workspace = true }
url = { version = "2.2.2", default-features = false, features = ["serde"] }
uuid = { version = "1.4.1", default-features = false, features = ["serde", "v4", "std"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version = "1.3.0", default-features = false, features = ["attributes", "default", "std", "unstable"] }
humantime = { version = "2.1.0", default-features = false }
interprocess = { version = "1.2.1", default-features = false }
isahc = { version = "1.7.2", default-features = false, features = ["http2", "text-decoding"] }
log4rs = { version = "1.2.0", default-features = false, features = ["pattern_encoder", "rolling_file_appender", "compound_policy", "fixed_window_roller", "size_trigger"] }
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
suggest = { version = "0.4.0", default-features = false }
termwiz = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]

[build-dependencies]
prost-build = "0.11.9"

[features]
